--- a/src/main/webapp/view/style.css
+++ b/src/main/webapp/view/style.css
@@ -70,3 +70,11 @@ body {
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
+
+
+label {
+    text-align: right;
+    clear: both;
+    float:left;
+    margin-right:15px;
+}
